# flinch

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: greetings.yml
src/: act.rs  authenticate.rs  bkp.rs  cache.rs  ce.rs  clips.rs  cmf.rs  col.rs  collection.rs  database.rs  db.rs  doc.rs  doc_trait.rs  document.rs  document_trait.rs  docv.rs  err.rs  errors.rs  events.rs  exec.rs  flinch.rs  ge.rs  global_events.rs  hdrs.rs  headers.rs  hidx.rs  index_fields.rs  index_hash.rs  index_inverted.rs  ividx.rs  kwr.rs  lib.rs  notif_type.rs  ops.rs  pbsb.rs  persistent.rs  plnr.rs  pri_headers.rs  pub_sub.rs  qry.rs  (+12 more)
src/extension/: flinch_ext.rs  func_result.rs  mod.rs  value.rs
tests/: library.rs  query.rs  schema.rs
