[package]
name = "flinch"
version = "0.1.5"
edition = "2021"
authors = ["Mohammad Julfikar <julfikar@eztech.com.my>", "Mohammad Julfikar <md.julfikar.mahmud@gmail.com>"]
categories = ["parser-implementations","caching","database-implementations"]
description = "flinch in-memory database"
exclude = [
    ".idea",
    ".github"
]
keywords = ["flinch","database","in-memory","memory","caching"]
license = "Apache-2.0"
repository = "https://github.com/mjm918/flinch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
flql = "0.1.8"
tokio = { version="1.27.0", features=["full"] }
crossbeam-queue = "0.3.8"
dashmap = { version="5.4.0", features=["rayon", "serde"] }
rayon = "1.7.0"
serde = { version="1.0.160", features=["derive"] }
serde_json = "1.0.95"
sled = "0.34.7"
chrono = "0.4.24"
thiserror = "1.0.40"
uuid = { version="1.3.1", features = ["v4","fast-rng","macro-diagnostics"] }